--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,2 +1,2 @@
-existinguser=User with that username already exists
-emptyfield=Field cannot be empty
+existing.user=User with that username already exists
+empty.field=Field cannot be empty
